--- a/projects.html
+++ b/projects.html
@@ -60,11 +60,11 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			</button>
-			<a class="navbar-brand" href="trial_portfolio.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+			<a class="navbar-brand" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">					
 					<li class="nav-item">
-						<a class="nav-link" href="trial_portfolio.html#aboutme">About Me</a>
+						<a class="nav-link" href="index.html#aboutme">About Me</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link active" href="projects.html">Projects</a>
