--- a/resume2.html
+++ b/resume2.html
@@ -64,11 +64,11 @@
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<a class="navbar-brand" href="trial_portfolio.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+			<a class="navbar-brand" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">					
 					<li class="nav-item">
-						<a class="nav-link" href="trial_portfolio.html#aboutme">About Me</a>
+						<a class="nav-link" href="index.html#aboutme">About Me</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="projects.html">Projects</a>
