Background Wallpaper issue fixed

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 		<style>
 		body
 		{
-			background-image: url(green_wallpaperv.JPG);
+			background-image: url(green_wallpaperv.jpg);
 			font-family: "Times New Roman", Times, serif;
 		}	
 		#nav_bar
