--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 		-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+				
 		<!-- All systlesheets -->
 		<style>
 		body
 		{
-			background-image: url(green_wallpaperv.jpg);
+			background-image: url(images/green_wallpaperv.jpg);
 			font-family: "Times New Roman", Times, serif;
 		}
 		#nav_bar
@@ -30,23 +31,40 @@
 		{
 			background-color: transparent;
 			text-align: center;
-			margin-top: 100px;
+			margin-top: 130px;
+			margin-bottom: 100px;
+			padding-top: 100px;
+		}
+		.font
+		{
+			font-family: Brush Script Std, Brush Script MT, cursive;
+			font-weight: 900;
 		}
 		.jumbo_buttons
 		{
 			background-color: transparent;
 			border: 1px solid black;
 			color: black;
+			font-style: italic;
 		}
 		.jumbo_buttons:hover
 		{
 			background: none;
 			border: 1px solid black;
 			color: black;
-		}		
-		p 
+		}	
+		.cards
 		{
-			text-indent: 50px;
+			 border: 1px solid black;
+		}
+		p
+		{
+			width: 850px;
+			font-size: 18px;
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: 20px;
+			font-style: italic;
 		}
 		#aboutme
 		{
@@ -56,13 +74,35 @@
 			margin-left: auto;
 			margin-right: auto;
 		}
-		#camera_pics
+		.headings
 		{
-			 display: none;
+			margin-top: 50px;
+			margin-bottom: 30px;
+			padding-top: 55px;			
+			font-size: 60px;
 		}
-		#books
+		#slideshow
 		{
-			 display: none;
+			background-color: Black;
+			width: 800px;
+			height: 400px;
+			margin-right: auto;
+			margin-left: auto;
+			box-shadow: 0 0 20px rgba(0,0,0,0.4);
+		}
+		.img_position
+		{
+			 margin-right: auto;
+			 margin-left: auto;
+			 margin-top: 20px;
+		}
+		#go_to_top
+		{
+			width: 70px; 
+			height: 70px;
+			position: fixed;
+			bottom: 5px;
+			left: 5px;
 		}
 		#footer
 		{
@@ -79,7 +119,8 @@
 		</style>
 	</head>
 	<body data-spy="scroll" data-target="#nav_bar" data-offset="150px">	
-		<!-- green_wallpaper.JPG url(http://wallpaperswide.com/polygon_green-wallpapers.html)-->
+		<!-- green_wallpaper.JPG url(http://wallpaperswide.com/polygon_green-wallpapers.html)
+		arrow_up.png url(https://www.nesdis.noaa.gov/sites/default/files/assets/images/arrow_up.png)-->
 		<!--
 		 *********** ELEMENTS ***********		
 		-->
@@ -106,47 +147,83 @@
 		<!-- JUMBOTRON -->
 		<!-- Plays the major function of compelling user to go through the whole website in the first few seconds of glancing at the webpage -->
 		<div class="jumbotron" id="jumbo">
-			<h1 class="display-3">Hi, I am Chaitali Khisti!!!</h1>
+			<h1 class="display-3 font">Hi, I am Chaitali Khisti!!!</h1>
 			<p class="lead">All geared up for full-time opportunities starting from May 2017.</p>
 			<hr class="my-4">
-			<p>Isn't it always good to have more professional information about people <i class="fa fa-smile-o" aria-hidden="true">?</i></p>
+			<p>Isn't it always good to have more professional information about people?</p>
 			<button type="button" class="btn btn-outline-info jumbo_buttons" onclick="return btntest_onclick()">Resume</button>
 		</div>
 		
 		<!-- CONTENT -->
 		<div class="container" id="aboutme">
-			<h2 align="center" style="margin-bottom: 30px;"><strong>About me</strong></h2>
-			<p>				
-				Hello,
-				<br>First of all, I would like to thank you for taking the time to view my website. As I understand the precious value of time,
-				I have crafted this portfolio website on my own to make it worth you effort.
-				<br>Currently, I am a graduate student at Colorado State University, Fort Collins. I shall be completing my Master's degree in
-				Spring 2017 and thus I am looking forward to full-time job opportunities therafter. 
-				My areas of interest are software developement and web development. 
-			</p>
-			<p>Areas of Interest: software developement and web development</p>
-			<p>Hobbies: Reading books, Photography, DIY Home Projects, Cooking</p>
-			<p>Tagline: "create what you wish existed", "success lasta longer when achieved without compromising on ethics."</p>
-			<div class="card card-outline-primary mb-3">
-				<div class="card-block">
-					Hobbies: 
-					<i class="fa fa-camera fa-2x" aria-hidden="true" id="camera"></i>,
-					<i class="fa fa-book fa-2x" aria-hidden="true" id="book"></i>
-					<div id="camera_pics">Hi! You should see camera pics here!</div>
-					<div id="books">Hi! you should see my favourite books here!!!</div>
+			<h2 align="center" class="headings font">About me</h2>
+			<div class="card card-outline-primary cards">
+				<div class="card-block para_align">
+					<p>Hello,</p>
+					<p>	First of all, I would like to thank you for taking the time to view my website. As I understand the precious value of time,
+						I have crafted this portfolio website on my own to make it worth you effort.
+					</p>
+					<p> Currently, I am a graduate student at Colorado State University, Fort Collins. I shall be completing my Master's degree in
+						Spring 2017 and thus I am looking forward to full-time job opportunities therafter. 
+						My areas of interest are software developement and web development. So, in my leisure time, I prefer working on
+						making softwares which I think would make life easier.
+					</p>
+					<p>Here are a few things about myself which I feel like sharing:</p>
+					<p><strong>Areas of Interest:</strong> Software Developement & Web Development</p>
+					<p><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography</p>
+					<p><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved without compromising on ethics."</p>
 				</div>
 			</div>
+			<h3 align="center" class="headings font">
+				<i class="fa fa-camera" aria-hidden="true" id="camera"></i>
+				<strong>Photography</strong>
+			</h3>
+			<!-- Carousel -->
+			<div class="card card-outline-primary cards">
+				<div class="card-block para_align">
+					<p>Though I am not into professional photography, I am among those people who tend to reach out for their
+					cell phones to capture the moment which later on brings a smile on my face.</p>
+					<p>Here's a small showcase of such clicks by me:</p>
+					<div id="slideshow" class="carousel slide" data-ride="carousel" data-pause="true">
+						<ol class="carousel-indicators">
+							<li data-target="#slideshow" data-slide-to="0" class="active"></li>
+							<li data-target="#slideshow" data-slide-to="1"></li>
+							<li data-target="#slideshow" data-slide-to="2"></li>
+						</ol>
+						<div class="carousel-inner" role="listbox">
+							<div class="carousel-item active">
+								<img class="d-block img-fluid img_position" src="images/picture1.jpg" alt="First slide">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block img-fluid img_position" src="images/picture2.jpg" alt="Second slide">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block img-fluid img_position" src="images/picture3.jpg" alt="Third slide">
+							</div>
+						</div>
+						<a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#slideshow" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+				</div>
+			</div>			
 		</div>
-		<div class="card card-outline-primary mb-3">
-				<div class="card-block">
-					Useful font awesomes:  <i class="fa fa-certificate" aria-hidden="true"></i> ,
-					<i class="fa fa-camera" aria-hidden="true"></i> , <i class="fa fa-graduation-cap" aria-hidden="true"></i> , 
-					<i class="fa fa-book" aria-hidden="true"></i> , <i class="fa fa-camera-retro" aria-hidden="true"></i> , 
-				</div>
-			</div>
+		
+		
+		<!-- Unslider -->
+		
+		
+		<!-- TOP-ARROW -->
+		<a href="#jumbo"><img src="images/arrow_up.png" id="go_to_top"></img></a>
+		
 		<!-- FOOTER -->
 		<div id="footer">
-			<p id="footer_para">© Chaitali Khisti 2017</p>
+			<div id="footer_para">© Chaitali Khisti 2017</div>
 		</div>
 		
 		
@@ -160,6 +237,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
 		<!-- Script source for BootStrap, has to be after jQuery as it depends on jQuery for basic functioning -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<!-- Script source for Unslider -->
 		
 		<script>
 			//Function for opening resume in other tab of same window
@@ -167,18 +245,8 @@
 			{
 				window.open("resume2.html");
 			}
-			//jQuery for dropdown on clicking icons of hobbies
-			$("#camera").click(function()
-			{
-				$("#books").hide();
-				$("#camera_pics").show();
-			});
-			$("#book").click(function()
-			{
-				$("#camera_pics").hide();
-				$("#books").show();
-			});
-		</script>
+			
+       </script>
 		
 	</body>
 </html>
