--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 		<style>
 		body
 		{
-			background-image: url(green_wallpaperv.jpg);
+			background-image: url(images/green_wallpaperv.jpg);
 			font-family: "Times New Roman", Times, serif;
 		}	
 		#nav_bar
@@ -26,14 +26,27 @@
 			top: 0;
 			width: 100%;
 		}
-		.container
+		.card_container
 		{
 			width: 1000px; 
-			margin-top: 50px;
+			padding-top: 5px;
 		}
 		.button-center
 		{
 			text-align: center;
+		}
+		.project_container
+		{
+			width: 1000px;
+			padding-top: 70px;
+		}
+		#go_to_top
+		{
+			width: 70px; 
+			height: 70px;
+			position: fixed;
+			bottom: 5px;
+			left: 5px;
 		}
 		#footer
 		{
@@ -50,7 +63,8 @@
 		</style>
 	</head>
 	<body>	
-		<!-- green_wallpaper.JPG url(http://wallpaperswide.com/polygon_green-wallpapers.html)-->
+		<!-- green_wallpaper.JPG url(http://wallpaperswide.com/polygon_green-wallpapers.html)
+		arrow_up.png url(https://www.nesdis.noaa.gov/sites/default/files/assets/images/arrow_up.png)-->
 		<!--
 		 *********** ELEMENTS ***********		
 		-->
@@ -78,7 +92,7 @@
 		
 		<!-- CONTENT -->
 		<!-- Project Cards -->
-		<div class="container">
+		<div class="container card_container" id="cards">
 			<h1 align="center" style="margin-top: 70px;"><strong>Projects</strong></h1>
 			<div class="card-deck" style="margin-top: 25px;">
 				<div class="card">
@@ -146,8 +160,8 @@
 			</div>
 		</div>	
 			<!-- Project Divs -->
-		<div class="container">
-			<div class="card" id="project1">
+		<div class="container project_container" id="project1">
+			<div class="card">
 				<div class="card-header">
 					<h4>Project 1</h4>
 				</div>						
@@ -162,7 +176,9 @@
 					</p>
 					<a href="#" class="card-link">View Code</a>
 				</div>
-			</div>		
+			</div>	
+		</div>
+		<div class="container project_container" id="project2">
 			<div class="card" id="project2" style="margin-top: 50px;">
 				<div class="card-header">
 					<h4>Project 2</h4>
@@ -179,6 +195,8 @@
 					<a href="#" class="card-link">View Code</a>
 				</div>
 			</div>
+		</div>
+		<div class="container project_container" id="project3">
 			<div class="card" id="project3" style="margin-top: 50px;">
 				<div class="card-header">
 					<h4>Project 3</h4>
@@ -195,6 +213,8 @@
 					<a href="#" class="card-link">View Code</a>
 				</div>
 			</div>
+		</div>
+		<div class="container project_container" id="project4">
 			<div class="card" id="project4" style="margin-top: 50px;">
 				<div class="card-header">
 					<h4>Project 4</h4>
@@ -211,6 +231,8 @@
 					<a href="#" class="card-link">View Code</a>
 				</div>
 			</div>
+		</div>
+		<div class="container project_container" id="project5">
 			<div class="card" id="project5" style="margin-top: 50px;">
 				<div class="card-header">
 					<h4>Project 5</h4>
@@ -227,6 +249,8 @@
 					<a href="#" class="card-link">View Code</a>
 				</div>
 			</div>
+		</div>
+		<div class="container project_container" id="project6">
 			<div class="card" id="project6" style="margin-top: 50px;">
 				<div class="card-header">
 					<h4>Project 6</h4>
@@ -243,17 +267,11 @@
 					<a href="#" class="card-link">View Code</a>
 				</div>
 			</div>
-		</div>	
-		<!-- 
-		<iframe src="Chaitali_K_Resume.pdf" height="315" width="560" frameborder="0"></iframe>
-			<object width="800px" height="1200px" data="Chaitali_K_Resume.pdf"></object>
-		<p>View the following for reference:</p>
-			<ul>
-				<li><a href="https://www.wayup.com/profile/Deepa-Vishwanath-87d8e9e837/#">Deepa Vishwanath</a></li>
-				<li><a href="http://kalynnakano.com/#illustration">Kalyn Nakano</a></li>
-				<li><a href="http://pushkarmodi.com/">Pushkar Modi</a></li>
-			</ul>
-		-->
+		</div>
+		
+		<!-- TOP-ARROW -->
+		<a href="#cards"><img src="images/arrow_up.png" id="go_to_top"></img></a>
+		
 		<!-- FOOTER -->
 		<div id="footer">
 			<p id="footer_para">© Chaitali Khisti 2017</p>
