--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-				
+		
 		<!-- All systlesheets -->
 		<style>
 		body
@@ -32,7 +32,7 @@
 			background-color: transparent;
 			text-align: center;
 			margin-top: 130px;
-			margin-bottom: 100px;
+			margin-bottom: 50px;
 			padding-top: 100px;
 		}
 		.font
@@ -52,10 +52,6 @@
 			background: none;
 			border: 1px solid black;
 			color: black;
-		}	
-		.cards
-		{
-			 border: 1px solid black;
 		}
 		p
 		{
@@ -66,43 +62,12 @@
 			margin-top: 20px;
 			font-style: italic;
 		}
-		#aboutme
-		{
-			width: 1000px;
-			margin-top: 40px;
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-		}
 		.headings
 		{
 			margin-top: 50px;
 			margin-bottom: 30px;
 			padding-top: 55px;			
 			font-size: 60px;
-		}
-		#slideshow
-		{
-			background-color: Black;
-			width: 800px;
-			height: 400px;
-			margin-right: auto;
-			margin-left: auto;
-			box-shadow: 0 0 20px rgba(0,0,0,0.4);
-		}
-		.img_position
-		{
-			 margin-right: auto;
-			 margin-left: auto;
-			 margin-top: 20px;
-		}
-		#go_to_top
-		{
-			width: 70px; 
-			height: 70px;
-			position: fixed;
-			bottom: 5px;
-			left: 5px;
 		}
 		#footer
 		{
@@ -111,14 +76,14 @@
 		#footer_para
 		{
 			text-align: right;
-			font-size: 60%;
+			font-size: 70%;
 			font-type: sans serif;
 			padding-right: 50px;
 			padding-top: 15px;
 		}
 		</style>
 	</head>
-	<body data-spy="scroll" data-target="#nav_bar" data-offset="150px">	
+	<body>	
 		<!-- green_wallpaper.JPG url(http://wallpaperswide.com/polygon_green-wallpapers.html)
 		arrow_up.png url(https://www.nesdis.noaa.gov/sites/default/files/assets/images/arrow_up.png)-->
 		<!--
@@ -133,7 +98,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">					
 					<li class="nav-item">
-						<a class="nav-link active" href="#aboutme">About Me</a>
+						<a class="nav-link" href="about_me.html">About Me</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="projects.html">Projects</a>
@@ -154,76 +119,9 @@
 			<button type="button" class="btn btn-outline-info jumbo_buttons" onclick="return btntest_onclick()">Resume</button>
 		</div>
 		
-		<!-- CONTENT -->
-		<div class="container" id="aboutme">
-			<h2 align="center" class="headings font">About me</h2>
-			<div class="card card-outline-primary cards">
-				<div class="card-block para_align">
-					<p>Hello,</p>
-					<p>	First of all, I would like to thank you for taking the time to view my website. As I understand the precious value of time,
-						I have crafted this portfolio website on my own to make it worth you effort.
-					</p>
-					<p> Currently, I am a graduate student at Colorado State University, Fort Collins. I shall be completing my Master's degree in
-						Spring 2017 and thus I am looking forward to full-time job opportunities therafter. 
-						My areas of interest are software developement and web development. So, in my leisure time, I prefer working on
-						making softwares which I think would make life easier.
-					</p>
-					<p>Here are a few things about myself which I feel like sharing:</p>
-					<p><strong>Areas of Interest:</strong> Software Developement & Web Development</p>
-					<p><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography</p>
-					<p><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved without compromising on ethics."</p>
-				</div>
-			</div>
-			<h3 align="center" class="headings font">
-				<i class="fa fa-camera" aria-hidden="true" id="camera"></i>
-				<strong>Photography</strong>
-			</h3>
-			<!-- Carousel -->
-			<div class="card card-outline-primary cards">
-				<div class="card-block para_align">
-					<p>Though I am not into professional photography, I am among those people who tend to reach out for their
-					cell phones to capture the moment which later on brings a smile on my face.</p>
-					<p>Here's a small showcase of such clicks by me:</p>
-					<div id="slideshow" class="carousel slide" data-ride="carousel" data-pause="true">
-						<ol class="carousel-indicators">
-							<li data-target="#slideshow" data-slide-to="0" class="active"></li>
-							<li data-target="#slideshow" data-slide-to="1"></li>
-							<li data-target="#slideshow" data-slide-to="2"></li>
-						</ol>
-						<div class="carousel-inner" role="listbox">
-							<div class="carousel-item active">
-								<img class="d-block img-fluid img_position" src="images/picture1.jpg" alt="First slide">
-							</div>
-							<div class="carousel-item">
-								<img class="d-block img-fluid img_position" src="images/picture2.jpg" alt="Second slide">
-							</div>
-							<div class="carousel-item">
-								<img class="d-block img-fluid img_position" src="images/picture3.jpg" alt="Third slide">
-							</div>
-						</div>
-						<a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="sr-only">Previous</span>
-						</a>
-						<a class="carousel-control-next" href="#slideshow" role="button" data-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">Next</span>
-						</a>
-					</div>
-				</div>
-			</div>			
-		</div>
-		
-		
-		<!-- Unslider -->
-		
-		
-		<!-- TOP-ARROW -->
-		<a href="#jumbo"><img src="images/arrow_up.png" id="go_to_top"></img></a>
-		
 		<!-- FOOTER -->
 		<div id="footer">
-			<div id="footer_para">© Chaitali Khisti 2017</div>
+			<div id="footer_para">© Chaitali Khisti 2017. All rights for this template are reserved except for external images.</div>
 		</div>
 		
 		
