--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,32 @@
 			top: 0;
 			width: 100%;
 		}
+		.font
+		{
+			font-family: Brush Script Std, Brush Script MT, cursive;
+			font-weight: 900;
+		}
+		.headings
+		{
+			margin-top: 50px;
+			margin-bottom: 30px;
+			padding-top: 55px;			
+			font-size: 60px;
+		}
 		.card_container
 		{
 			width: 1000px; 
 			padding-top: 5px;
+		}
+		.card_header
+		{
+			font-size: 23px;
+			color: #000099;
+		}
+		.card_title
+		{
+			font-size: 18px;
+			font-weight: bold;
 		}
 		.button-center
 		{
@@ -55,7 +77,7 @@
 		#footer_para
 		{
 			text-align: right;
-			font-size: 60%;
+			font-size: 70%;
 			font-type: sans serif;
 			padding-right: 50px;
 			padding-top: 15px;
@@ -93,44 +115,44 @@
 		<!-- CONTENT -->
 		<!-- Project Cards -->
 		<div class="container card_container" id="cards">
-			<h1 align="center" style="margin-top: 70px;"><strong>Projects</strong></h1>
+			<h1 align="center" class="font headings">Projects</h1>
 			<div class="card-deck" style="margin-top: 25px;">
 				<div class="card">
-					<h3 class="card-header">Featured</h3>
+					<h3 class="card-header card_header">Database Management</h3>
 					<div class="card-block">
-						<h4 class="card-title">Project 1</h4>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<h4 class="card-title card_title">Access Controls of IoT</h4>
+						<p class="card-text">The project implements user and device access control on cloud database.</p>
 						<div class="button-center">
-							<a href="#project1" class="btn btn-secondary-outine">Go to Project 1</a>
+							<a href="#project1" class="btn btn-secondary-outine">Go to Project</a>
 						</div>
 					</div>
 				</div>
 				<div class="card">
-					<h3 class="card-header">Featured</h3>
+					<h3 class="card-header card_header">Software Development</h3>
 					<div class="card-block">
-						<h4 class="card-title">Project 2</h4>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<h4 class="card-title card_title">PDF to Word Converter</h4>
+						<p class="card-text">The project aims to create an application for text conversion.</p>
 						<div class="button-center">
-							<a href="#project2" class="btn btn-secondary-outine">Go to Project 2</a>
+							<a href="#project2" class="btn btn-secondary-outine">Go to Project</a>
 						</div>
 					</div>
 				</div>
 				<div class="card">
-					<h3 class="card-header">Featured</h3>
+					<h3 class="card-header card_header">Machine Learning</h3>
 					<div class="card-block">
-						<h4 class="card-title">Project 3</h4>
+						<h4 class="card-title card_title">Dropout Implementation</h4>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 						<div class="button-center">
-							<a href="#project3" class="btn btn-secondary-outine">Go to Project 3</a>
+							<a href="#project3" class="btn btn-secondary-outine">Go to Project</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="card-deck" style="margin-top: 25px;">
 				<div class="card">
-					<h3 class="card-header">Featured</h3>
+					<h3 class="card-header card_header">Embedded System</h3>
 					<div class="card-block">
-						<h4 class="card-title">Project 4</h4>
+						<h4 class="card-title card_title">Vehicle Diagnostic System</h4>
 						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 						<div class="button-center">
 							<a href="#project4" class="btn btn-secondary-outine">Go to Project 4</a>
@@ -138,22 +160,22 @@
 					</div>
 				</div>
 				<div class="card">
-					<h3 class="card-header">Featured</h3>
+					<h3 class="card-header card_header">Yet to come...</h3>
 					<div class="card-block">
-						<h4 class="card-title">Project 5</h4>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<h4 class="card-title card_title">Project Title</h4>
+						<p class="card-text">Short description of the project to be done.</p>
 						<div class="button-center">
-							<a href="#project5" class="btn btn-secondary-outine">Go to Project 5</a>
+							<a href="#project5" class="btn btn-secondary-outine">Go to Project</a>
 						</div>
 					</div>
 				</div>
 				<div class="card">
-					<h3 class="card-header">Featured</h3>
+					<h3 class="card-header card_header">Yet to come...</h3>
 					<div class="card-block">
-						<h4 class="card-title">Project 6</h4>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<h4 class="card-title card_title">Project Title</h4>
+						<p class="card-text">Short description of the project to be done.</p>
 						<div class="button-center">
-							<a href="#project6" class="btn btn-secondary-outine">Go to Project 6</a>
+							<a href="#project6" class="btn btn-secondary-outine">Go to Project</a>
 						</div>
 					</div>
 				</div>
@@ -163,15 +185,16 @@
 		<div class="container project_container" id="project1">
 			<div class="card">
 				<div class="card-header">
-					<h4>Project 1</h4>
+					<h4>Access Controls of IoT</h4>
 				</div>						
 				<div class="card-block">
-					<h6 class="card-subtitle mb-2 text-muted">Languages used: </h6>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-					<br>Features/ Implementation:
+					<h6 class="card-subtitle mb-2 text-muted">Software Description: MySQL(MySQL WorkBench), Java(NetBeans IDE)</h6>
+					<p class="card-text">Implementation:
 					<ul>
-						<li>Feature 1</li>
-						<li>Feature 2</li>
+						<li>Simulated an IoT environment with various IoT devices and users as nodes and implemented centralized cloud 
+						database architecture model with the objective of deriving a secure Access Control Model to monitor the device
+						data security in IoT from a user as well as device perspective.																						
+						</li>
 					</ul>
 					</p>
 					<a href="#" class="card-link">View Code</a>
@@ -181,15 +204,18 @@
 		<div class="container project_container" id="project2">
 			<div class="card" id="project2" style="margin-top: 50px;">
 				<div class="card-header">
-					<h4>Project 2</h4>
+					<h4>Stand-Alone PDF to Word Converter</h4>
 				</div>						
 				<div class="card-block">
-					<h6 class="card-subtitle mb-2 text-muted">Languages used: </h6>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-					<br>Features/ Implementation:
+					<h6 class="card-subtitle mb-2 text-muted">Software Description: Java(NetBeans IDE)</h6>
+					<p class="card-text">Implementation:
 					<ul>
-						<li>Feature 1</li>
-						<li>Feature 2</li>
+						<li>Currently working on a stand-alone off-line application which stores and presents the content of a PDF in a WORD
+						file using Java Swings.
+						</li>
+						<li>The future scope I look forward to is implementing the same using Spring Framework due to its high flexibility
+						with RDBMS and robustness.
+						</li>
 					</ul>
 					</p>
 					<a href="#" class="card-link">View Code</a>
@@ -199,10 +225,10 @@
 		<div class="container project_container" id="project3">
 			<div class="card" id="project3" style="margin-top: 50px;">
 				<div class="card-header">
-					<h4>Project 3</h4>
+					<h4>Dropout Implementation</h4>
 				</div>						
 				<div class="card-block">
-					<h6 class="card-subtitle mb-2 text-muted">Languages used: </h6>
+					<h6 class="card-subtitle mb-2 text-muted">Software Description: Python</h6>
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
 					<br>Features/ Implementation:
 					<ul>
@@ -217,15 +243,18 @@
 		<div class="container project_container" id="project4">
 			<div class="card" id="project4" style="margin-top: 50px;">
 				<div class="card-header">
-					<h4>Project 4</h4>
+					<h4>Vehicle Diagnostic System Using Bluetooth and GSM Module</h4>
 				</div>						
 				<div class="card-block">
-					<h6 class="card-subtitle mb-2 text-muted">Languages used: </h6>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-					<br>Features/ Implementation:
+					<h6 class="card-subtitle mb-2 text-muted">Software Description: Java (Eclipse IDE, NetBeans IDE), hardware implementation</h6>
+					<p class="card-text">Implementation:
 					<ul>
-						<li>Feature 1</li>
-						<li>Feature 2</li>
+						<li>The project can be viewed as an IoT implementation as the real time data from various automobile sensors is 
+						transmitted to user android phone using  Bluetooth module.
+						</li>
+						<li>The data is further transmitted to a remote server for monitoring through the in-built GSM module in the 
+						android phone.
+						</li>
 					</ul>
 					</p>
 					<a href="#" class="card-link">View Code</a>
@@ -274,7 +303,7 @@
 		
 		<!-- FOOTER -->
 		<div id="footer">
-			<p id="footer_para">© Chaitali Khisti 2017</p>
+			<div id="footer_para">© Chaitali Khisti 2017. All rights for this template are reserved except for external images.</div>
 		</div>
 		
 		
@@ -288,13 +317,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
 		<!-- Script source for BootStrap, has to be after jQuery as it depends on jQuery for basic functioning -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-		
-		<script>
-			function btntest_onclick()
-			{
-				window.open("page2.html");
-			}
-		</script>
-		
+				
 	</body>
 </html>
