--- a/resume2.html
+++ b/resume2.html
@@ -55,7 +55,7 @@
 		#footer_para
 		{
 			text-align: right;
-			font-size: 60%;
+			font-size: 70%;
 			font-type: sans serif;
 			padding-right: 50px;
 			padding-top: 15px;
@@ -77,7 +77,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">					
 					<li class="nav-item">
-						<a class="nav-link" href="index.html#aboutme">About Me</a>
+						<a class="nav-link" href="about_me.html">About Me</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="projects.html">Projects</a>
@@ -100,7 +100,7 @@
 		
 		<!-- FOOTER -->
 		<div id="footer">
-			<p id="footer_para">© Chaitali Khisti 2017</p>
+			<div id="footer_para">© Chaitali Khisti 2017. All rights for this template are reserved except for external images.</div>
 		</div>
 		
 		
@@ -114,13 +114,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
 		<!-- Script source for BootStrap, has to be after jQuery as it depends on jQuery for basic functioning -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-		
-		<script>
-			function btntest_onclick()
-			{
-				window.open("page2.html");
-			}
-		</script>
 		
 	</body>
 </html>
