Changes in bootstrap card paragraphs

--- a/about_me.html
+++ b/about_me.html
@@ -134,19 +134,20 @@
 			<h2 align="center" class="headings font">About me</h2>
 			<div class="card card-outline-primary cards">
 				<div class="card-block para_align">
-					<p>Hello,</p>
-					<p>	First of all, I would like to thank you for taking the time to view my website. As I understand the precious value of time,
-						I have crafted this portfolio website on my own to make it worth you effort.
+					<p class="card-text">Hello,</p>
+					<p class="card-text">	First of all, I would like to thank you for taking the time to view my website. As I understand the precious value of time,
+						I have crafted this portfolio website on my own to make it worth your effort.
 					</p>
-					<p> Currently, I am a graduate student at Colorado State University, Fort Collins. I shall be completing my Master's degree in
+					<p class="card-text"> Currently, I am a graduate student at Colorado State University, Fort Collins. I shall be completing my Master's degree in
 						Spring 2017 and thus I am looking forward to full-time job opportunities therafter. 
 						My areas of interest are software developement and web development. So, in my leisure time, I prefer working on
 						making softwares which I think would make life easier.
+						<br>Here are a few things about myself which I feel like sharing:</p>
+						<br><strong>Areas of Interest:</strong> Software Developement & Web Development</p>
+						<br><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography</p>
+						<br><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved
+						without compromising on ethics."
 					</p>
-					<p>Here are a few things about myself which I feel like sharing:</p>
-					<p><strong>Areas of Interest:</strong> Software Developement & Web Development</p>
-					<p><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography</p>
-					<p><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved without compromising on ethics."</p>
 				</div>
 			</div>
 			<h3 align="center" class="headings font">
@@ -156,10 +157,10 @@
 			<!-- Carousel -->
 			<div class="card card-outline-primary cards">
 				<div class="card-block para_align">
-					<p>Though I am not into professional photography, I am among those people who tend to reach out for their
+					<p class="card-text">Though I am not into professional photography, I am among those people who tend to reach out for their
 					cell phones to capture the moment which later on brings a smile on my face.</p>
-					<p>Here's a small showcase of such clicks by me:</p>
-					<div id="slideshow" class="carousel slide" data-ride="carousel" data-pause="true">
+					<p class="card-text">Here's a small showcase of such clicks by me:</p>
+					<div id="slideshow" class="carousel slide" data-ride="carousel">
 						<ol class="carousel-indicators">
 							<li data-target="#slideshow" data-slide-to="0" class="active"></li>
 							<li data-target="#slideshow" data-slide-to="1"></li>
