Undoing changes to card paragraph

--- a/about_me.html
+++ b/about_me.html
@@ -142,10 +142,11 @@
 						Spring 2017 and thus I am looking forward to full-time job opportunities therafter. 
 						My areas of interest are software developement and web development. So, in my leisure time, I prefer working on
 						making softwares which I think would make life easier.
-						<br>Here are a few things about myself which I feel like sharing:</p>
-						<br><strong>Areas of Interest:</strong> Software Developement & Web Development</p>
-						<br><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography</p>
-						<br><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved
+					</p>
+					<p class="card-text">Here are a few things about myself which I feel like sharing:</p>
+					<p class="card-text"><strong>Areas of Interest:</strong> Software Developement & Web Development</p>
+					<p class="card-text"><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography</p>
+					<p class="card-text"><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved
 						without compromising on ethics."
 					</p>
 				</div>
