About_me.html paragraph responsive

--- a/about_me.html
+++ b/about_me.html
@@ -37,8 +37,7 @@
 			 border: 1px solid black;
 		}
 		p
-		{
-			width: 850px;
+		{			
 			font-size: 18px;
 			margin-left: auto;
 			margin-right: auto;
@@ -133,21 +132,20 @@
 		<div class="container" id="aboutme">
 			<h2 align="center" class="headings font">About me</h2>
 			<div class="card card-outline-primary cards">
-				<div class="card-block para_align">
-					<p class="card-text">Hello,</p>
-					<p class="card-text">	First of all, I would like to thank you for taking the time to view my website. As I understand the precious value of time,
-						I have crafted this portfolio website on my own to make it worth your effort.
-					</p>
-					<p class="card-text"> Currently, I am a graduate student at Colorado State University, Fort Collins. I shall be completing my Master's degree in
-						Spring 2017 and thus I am looking forward to full-time job opportunities therafter. 
-						My areas of interest are software developement and web development. So, in my leisure time, I prefer working on
-						making softwares which I think would make life easier.
-					</p>
-					<p class="card-text">Here are a few things about myself which I feel like sharing:</p>
-					<p class="card-text"><strong>Areas of Interest:</strong> Software Developement & Web Development</p>
-					<p class="card-text"><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography</p>
-					<p class="card-text"><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved
-						without compromising on ethics."
+				<div class="card-block">
+					<p class="card-text">Hello,
+						<br>First of all, I would like to thank you for taking the time to view my website. 
+							As I understand the precious value of time,	I have crafted this portfolio website on my own to make
+							it worth your effort.
+						<br> Currently, I am a graduate student at Colorado State University, Fort Collins. I shall be completing my Master's degree in
+							Spring 2017 and thus I am looking forward to full-time job opportunities therafter. 
+							My areas of interest are software developement and web development. So, in my leisure time, I prefer working on
+							making softwares which I think would make life easier.
+						<br>Here are a few things about myself which I feel like sharing:
+						<br><strong>Areas of Interest:</strong> Software Developement, Database Systems & Web Development
+						<br><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography
+						<br><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved
+							without compromising on ethics."
 					</p>
 				</div>
 			</div>
