--- a/about_me.html
+++ b/about_me.html
@@ -142,7 +142,7 @@
 							My areas of interest are software developement and web development. So, in my leisure time, I prefer working on
 							making softwares which I think would make life easier.
 						<br>Here are a few things about myself which I feel like sharing:
-						<br><strong>Areas of Interest:</strong> Software Developement, Database Systems & Web Development
+						<br><strong>Areas of Interest:</strong> Software Development, Database Systems & Web Development
 						<br><strong>Hobbies:</strong> DIY Home Projects, Cooking, Reading books, Photography
 						<br><strong>Taglines I believe in:</strong> "create things what you wish existed", "success lasts longer when achieved
 							without compromising on ethics."
