--- a/projects.html
+++ b/projects.html
@@ -210,11 +210,10 @@
 					<h6 class="card-subtitle mb-2 text-muted">Software Description: Java(NetBeans IDE)</h6>
 					<p class="card-text">Implementation:
 					<ul>
-						<li>Currently working on a stand-alone off-line application which stores and presents the content of a PDF in a WORD
-						file using Java Swings.
+						<li>Currently working on stand-alone offline application to store and present the content of a PDF in Word format
+							using Java Swings.
 						</li>
-						<li>The future scope I look forward to is implementing the same using Spring Framework due to its high flexibility
-						with RDBMS and robustness.
+						<li>The future scope is implementation in Spring framework due to its robustness and high flexibility in RDBMS.
 						</li>
 					</ul>
 					</p>
@@ -225,15 +224,16 @@
 		<div class="container project_container" id="project3">
 			<div class="card" id="project3" style="margin-top: 50px;">
 				<div class="card-header">
-					<h4>Dropout Implementation</h4>
+					<h4>Dropout technique implementation to avoid overfitting in Neural Networks</h4>
 				</div>						
 				<div class="card-block">
 					<h6 class="card-subtitle mb-2 text-muted">Software Description: Python</h6>
 					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-					<br>Features/ Implementation:
+					<br>Implementation:
 					<ul>
-						<li>Feature 1</li>
-						<li>Feature 2</li>
+						<li>Studied and implemented dropout technique on MNIST data set with the use of tanh activation function and compared
+							the results with other regularization methods like L1 weight decay and L2 weight decay.
+						</li>
 					</ul>
 					</p>
 					<a href="#" class="card-link">View Code</a>
