Live counter introduced and comments removed

--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html lang="en">
 	<head>
 		<title>Chaitali Khisti</title>
-		<!-- All 'meta's -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name=keywords content="web designer, front-end developer, databases, chaitalikhisti, ChaitaliKhisti">		
-		<!--
-		 *********** STYLESHEETS ***********		
-		-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		
-		<!-- All systlesheets -->
 		<style>
 		body
 		{
@@ -84,12 +78,6 @@
 		</style>
 	</head>
 	<body>	
-		<!-- green_wallpaper.JPG url(http://wallpaperswide.com/polygon_green-wallpapers.html)
-		arrow_up.png url(https://www.nesdis.noaa.gov/sites/default/files/assets/images/arrow_up.png)-->
-		<!--
-		 *********** ELEMENTS ***********		
-		-->
-		<!-- NAVBAR -->
 		<nav class="navbar navbar-inverse navbar-toggleable-md navbar-light bg-faded fixed-top" id="nav_bar">			
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -108,9 +96,12 @@
 					</li>
 				</ul>				
 			</div>
+			<span class="badge">
+				<a href="https://www.freecounterstat.com">
+					<img src="https://counter4.fcs.ovh/private/freecounterstat.php?c=1d0849e1771e6c2f58e936dfdda6472d" border="0" title="website hits counter" alt="website hits counter">
+				</a>
+			</span>
 		</nav>		
-		<!-- JUMBOTRON -->
-		<!-- Plays the major function of compelling user to go through the whole website in the first few seconds of glancing at the webpage -->
 		<div class="jumbotron" id="jumbo">
 			<h1 class="display-3 font">Hi, I am Chaitali Khisti!!!</h1>
 			<p class="lead">All geared up for full-time opportunities starting from May 2017.</p>
@@ -118,33 +109,18 @@
 			<p>Isn't it always good to have more professional information about people?</p>
 			<button type="button" class="btn btn-outline-info jumbo_buttons" onclick="return btntest_onclick()">Resume</button>
 		</div>
-		
-		<!-- FOOTER -->
 		<div id="footer">
 			<div id="footer_para">© Chaitali Khisti 2017. All rights for this template are reserved except for external images.</div>
 		</div>
-		
-		
-		<!--
-		 *********** SCRIPTS ***********		
-		-->		
-		<!-- Script source for jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
 		</script>
-		<!-- Script source for Tethering -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-		<!-- Script source for BootStrap, has to be after jQuery as it depends on jQuery for basic functioning -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-		<!-- Script source for Unslider -->
-		
 		<script>
-			//Function for opening resume in other tab of same window
 			function btntest_onclick()
 			{
 				window.open("resume2.html");
-			}
-			
-       </script>
-		
+			}			
+       </script>		
 	</body>
 </html>
