--- a/projects.html
+++ b/projects.html
@@ -2,17 +2,12 @@
 <html lang="en">
 	<head>
 		<title>Projects</title>
-		<!-- All 'meta's -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name=keywords content="web designer, front-end developer, databases, chaitalikhisti, ChaitaliKhisti">		
-		<!--
-		 *********** STYLESHEETS ***********		
-		-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<!-- All systlesheets -->
 		<style>
 		body
 		{
@@ -84,13 +79,7 @@
 		}
 		</style>
 	</head>
-	<body>	
-		<!-- green_wallpaper.JPG url(http://wallpaperswide.com/polygon_green-wallpapers.html)
-		arrow_up.png url(https://www.nesdis.noaa.gov/sites/default/files/assets/images/arrow_up.png)-->
-		<!--
-		 *********** ELEMENTS ***********		
-		-->
-		<!-- NAVBAR -->
+	<body>
 		<nav class="navbar navbar-inverse navbar-toggleable-md navbar-light bg-faded fixed-top" id="nav_bar">			
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -100,7 +89,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">					
 					<li class="nav-item">
-						<a class="nav-link" href="index.html#aboutme">About Me</a>
+						<a class="nav-link" href="about_me.html">About Me</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link active" href="projects.html">Projects</a>
@@ -110,10 +99,7 @@
 					</li>
 				</ul>				
 			</div>
-		</nav>			
-		
-		<!-- CONTENT -->
-		<!-- Project Cards -->
+		</nav>
 		<div class="container card_container" id="cards">
 			<h1 align="center" class="font headings">Projects</h1>
 			<div class="card-deck" style="margin-top: 25px;">
@@ -180,8 +166,7 @@
 					</div>
 				</div>
 			</div>
-		</div>	
-			<!-- Project Divs -->
+		</div>
 		<div class="container project_container" id="project1">
 			<div class="card">
 				<div class="card-header">
@@ -268,8 +253,8 @@
 				</div>						
 				<div class="card-block">
 					<h6 class="card-subtitle mb-2 text-muted">Languages used: </h6>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-					<br>Features/ Implementation:
+					<p class="card-text">Short description of the project.
+					<br>Implementation:
 					<ul>
 						<li>Feature 1</li>
 						<li>Feature 2</li>
@@ -286,8 +271,8 @@
 				</div>						
 				<div class="card-block">
 					<h6 class="card-subtitle mb-2 text-muted">Languages used: </h6>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-					<br>Features/ Implementation:
+					<p class="card-text">Short description of the project.
+					<br>Implementation:
 					<ul>
 						<li>Feature 1</li>
 						<li>Feature 2</li>
@@ -297,26 +282,13 @@
 				</div>
 			</div>
 		</div>
-		
-		<!-- TOP-ARROW -->
 		<a href="#cards"><img src="images/arrow_up.png" id="go_to_top"></img></a>
-		
-		<!-- FOOTER -->
 		<div id="footer">
 			<div id="footer_para">© Chaitali Khisti 2017. All rights for this template are reserved except for external images.</div>
 		</div>
-		
-		
-		<!--
-		 *********** SCRIPTS ***********		
-		-->		
-		<!-- Script source for jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
 		</script>
-		<!-- Script source for Tethering -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-		<!-- Script source for BootStrap, has to be after jQuery as it depends on jQuery for basic functioning -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-				
 	</body>
 </html>
