Live counter format changed

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			</div>
 			<span class="badge">
 				<a href="https://www.freecounterstat.com">
-					<img src="https://counter4.fcs.ovh/private/freecounterstat.php?c=1d0849e1771e6c2f58e936dfdda6472d" border="0" title="website hits counter" alt="website hits counter">
+					<img src="https://counter4.fcs.ovh/private/freecounterstat.php?c=897c37077d7aa70f48db2e0388d984c0" border="0" title="free hit counter" alt="free hit counter">
 				</a>
 			</span>
 		</nav>		
