--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
 				</ul>				
 			</div>
 			<span class="badge">
-				<a href="https://www.freecounterstat.com">
-					<img src="https://counter4.fcs.ovh/private/freecounterstat.php?c=897c37077d7aa70f48db2e0388d984c0" border="0" title="free hit counter" alt="free hit counter">
-				</a>
+				<a href="https://www.freecounterstat.com"><img src="https://counter4.fcs.ovh/private/freecounterstat.php?c=897c37077d7aa70f48db2e0388d984c0" border="0" title="free web counters" alt="free web counters"></a>
 			</span>
 		</nav>		
 		<div class="jumbotron" id="jumbo">
