--- a/otherPages/projects.html
+++ b/otherPages/projects.html
@@ -42,6 +42,52 @@
                 <div>
                     <h4>
                         <i class="fa fa-database" aria-hidden="true"></i>
+                        Stand-Alone Appication Tracking System for Job Seekers
+                    </h4>
+                </div>
+                <div class="card-text text-muted details">
+                    <p>
+                        <i class="fa fa-file-code-o" aria-hidden="true"></i>
+                        Languages:  SQL, Java, VCS
+                    </p>
+                    <p>
+                        <i class="fa fa-wrench" aria-hidden="true"></i>
+                        Tools: JavaFX, MySQL Workbench, Apache Derby, IntelliJ IDE,Git
+                    </p>
+                </div>
+                <div class="card-text">
+                    <h6>Objective:</h6>
+                    <p>
+                        To create a logging system for storing, retrieving and 
+                        statistically analysing job application details.
+                    </p>
+                    <h6>Implementation:</h6>
+                    <p>
+                        <ul>
+                            <li>
+                                Developed an application with various
+                                database utlities with logging fields like
+                                company and position details.
+                            </li>
+                            <li>
+                                Powered this application using JavaFX GUI
+                                and MySQL Server support for queries to database.                                
+                            </li>
+                            <li>
+                                Packaged this application as a stand-alone system (executable file)
+                                using Apache Derby embedded JDBC driver for optimized
+                                database setup on local systems.
+                            </li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-block">
+                <div>
+                    <h4>
+                        <i class="fa fa-database" aria-hidden="true"></i>
                         Access Control for Internet of Things
                     </h4>
                 </div>
